# SqlEditor

./: .gitignore  CMakeLists.txt  ConnectToDB.cpp  ConnectToDB.h  SqlEditor.sln  SqlTest.cpp  SqlTest.vcxproj  SqlTest.vcxproj.filters  stdafx.cpp
cmake/: FindSQLAPI.cmake
include/: ConnectToDB.h
src/: CMakeLists.txt  ConnectToDB.cpp  SqlTest.cpp
